# langgraph

./: .dockerignore  .env.example  .gitignore  AEGRA_REGISTRATION_GUIDE.md  Dockerfile  LLM_INTEGRATION_GUIDE.md  README.md  docker-compose.yml  langgraph.json  pyproject.toml  searxng-categories.yml  searxng-settings.yml  searxng_engine_descriptions.yaml  searxng_engines.txt  searxng_recommended_engines.yaml  searxng_settings.yml
.claude/: settings.local.json
.goose/memory/: dependency-management.txt
plans/: deep-research-agent.md  deployment-guide.md
src/: __init__.py  hello_main.py  main.py  mcp_server.py
src/agent/: __init__.py  config.py  nodes.py  web_search_agent.py
src/agents/: __init__.py  agent2.py  base.py  config.py  deep-research-agent-1.py  hello_agent.py  langchain_web_agent.py  llm_wrapper.py  nodes.py  register_with_aegra.py  searxng_search_agent.py  state.py  web_search_agent.py
src/agents/deep_research/: agent.py  context.py  graph.py  manifest.json  nodes.py  register.py  state.py  tools.py  utils.py
src/tools/: __init__.py  search.py  search2.py
tests/: conftest.py
tests/deep_research/: test_agent.py  test_integration.py  test_live.py
tests/mcp/: test_mcp_connection.py  test_mcp_server_connectivity.py  test_mcp_tool_discovery.py
