[project]
name = "langgraph-web-search-agent"
version = "0.1.0"
description = "LangGraph-based web search agent for local LLMs"
readme = "README.md"
requires-python = "==3.14.*"

dependencies = [
    "langgraph>=1.1.10",
    "langgraph-sdk==0.3.14",
    "langchain-community==0.4.1",
    "langchain>=1.2.18",
    "langchain-openai==1.2.1",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "openlit==1.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "mypy==2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
